# HotkeyPanel

./: .gitignore  CMakeLists.txt  LICENSE  PCH.h  README.md  build.bat  build_wrapper.ps1  do_build.bat  vcpkg-configuration.json  vcpkg.json
src/: BlockerMenu.cpp  BlockerMenu.h  InputHandler.cpp  InputHandler.h  JsonStore.cpp  JsonStore.h  MsvcShim.cpp  PrismaUIBridge.cpp  PrismaUIBridge.h  plugin.cpp
